--- a/templates/index.html
+++ b/templates/index.html
@@ -160,12 +160,12 @@
             <div id="personal">
                 <div class="input-group">
                     <label for="name">Full Name:</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" required>
                 </div>
 
                 <div class="input-group">
                     <label for="phone">Phone:</label>
-                    <input type="tel" id="phone" name="phone" required>
+                    <input type="tel" id="phone" required>
                 </div>
 
                 <div class="input-group">
@@ -183,7 +183,7 @@
 
                 <div class="input-group">
                     <label for="address">Address:</label>
-                    <input type="text" id="address" name="address" required>
+                    <input type="text" id="address" required>
                 </div>
             </div>
 
