--- a/templates/index.html
+++ b/templates/index.html
@@ -171,8 +171,8 @@
                 <div class="input-group">
                     <label for="sex">Sex:</label>
                     <select id="sex" name="sex" required>
-                        <option value="M">Male</option>
-                        <option value="F">Female</option>
+                        <option>Male</option>
+                        <option>Female</option>
                     </select>
                 </div>
 
