--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
 
                 <div class="input-group">
                     <label for="sex">Sex:</label>
-                    <select id="sex" name="sex" required>
+                    <select id="sex">
                         <option>Male</option>
                         <option>Female</option>
                     </select>
